--- a/source/sass/blocks/is-open.scss
+++ b/source/sass/blocks/is-open.scss
@@ -16,8 +16,33 @@
 
 .is-open.header {
   padding-left: 22px;
-  margin-right: -15px;
 
   background: rgba(0, 43, 102, 0.5);
   filter: none;
+}
+
+.is-open .hamb {
+  position: absolute;
+  right: 16px;
+  top: 26px;
+}
+
+.is-open .hamb__line {
+  display: none;
+}
+
+.is-open .hamb::before {
+  width: 18px;
+  left: 11px;
+  top: 5px;
+  transform: rotate(45deg);
+  background-color: $color-primary-black;
+}
+
+.is-open .hamb::after {
+  width: 18px;
+  left: 11px;
+  bottom: 5px;
+  transform: rotate(-45deg);
+  background-color: $color-primary-black;
 }
